sandbox/output
StringCalculator.java:8: error: incompatible types: int cannot be converted to String[]
        String temp[] = number.split(",").length;
                                         ^
StringCalculator.java:9: error: incomparable types: String[] and int
        if(temp == 1){
                ^
2 errors
